--- a/style.css
+++ b/style.css
@@ -647,3 +647,72 @@ h3{
   margin-bottom: 38px;
 }
 
+.volunteering_img img{
+  width: 510px;
+  height: 467px;
+  margin-top: 36px;
+  margin-left: 110px;
+}
+
+.volunteering_text{
+
+  margin-top: 95px;
+}  
+
+.volunteering_text h3 {
+  margin-left: 73px;
+}
+
+.volunteering_text p{
+  margin-left: 73px;
+  width: 466px;
+  height: 182px;
+}
+
+.volunteering_text .button_blue{
+  margin-top: 17px;
+  margin-left: 73px;
+}
+
+.screen_7{
+  width: 1366px;
+  height: 563px;
+  background: #e2eff8;
+}
+
+.screen_7 h3{
+  font-family: 'GilroyMedium', Courier, monospace;
+  font-weight: 600;
+  font-size: 28px;
+  line-height: 24px;
+  height: 32px;
+  padding-top: 54px;
+  margin-left: 499px;
+}
+
+.screen_7 p{
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 140%;
+  margin-top: 40px;
+  margin-left: 43px;
+}
+
+.news{
+  margin-left: 286px;
+}
+
+.news img{
+  width: 150px;
+  height: 150px;
+  margin-top: 30px;
+}
+
+.news p{
+  width: 603px;
+  height: 140px;
+}
+
+.screen_7 a{
+   margin-left: 306px;
+}
