--- a/style_forms.css
+++ b/style_forms.css
@@ -187,9 +187,53 @@
    font-size: 14px;
    line-height: 20px;
    color: #6B6B6B;
+   margin-right: 11px;
 }
 
 
 input[type=radio]:hover:before {
    color: #242424;
+}
+
+input[type=date]{
+   width: 260px;
+   margin: 0px;
+}
+
+input[type=time]{
+   width: 170px;
+   float:right;
+   margin: 0px;
+}
+
+.datatime img{
+   width: 20px;
+   height: 20px;
+}
+
+input[type=checkbox]{
+   width: 16px;
+   height: 16px;
+   margin-right: 12px;
+   margin-top: 12px;
+}
+
+.datatime .navigation p{
+   margin-top: 8px;
+   margin-left: 12px;
+   
+}
+
+.avtohelp p{
+   margin-bottom: 0px;
+}
+
+.navigation button{
+   border-radius: 50%;
+   width: 20px;
+   height: 20px;
+   margin-top: 8px;
+   background: url(/img/Group\ 47.png) no-repeat top center;
+   border:none;
+
 }
